--- a/bin/default.ini
+++ b/bin/default.ini
@@ -11,7 +11,7 @@ OPTIONS=                ; for other options
 CACHEFLAG=TRUE          ; for cache switch, TRUE or FALSE
 MTCRDELAY=10            ; 
 TARGETINITFILE=         ; for Target Init
-CDITYPE=                ; for pre set cdi(5 or 2)
+CDITYPE=                ; for pre set cdi(5 or 2 or CJTAG2)
 PRERESET=FALSE          ; TRUE or FALSE
 TDESCXMLFILE=           ; for target-description xml select
 NRESETDELAY=100         ;
@@ -41,12 +41,13 @@ DISABLEFLASHBP=FALSE    ; TRUE or FALSE
 DISABLESIMBP=FALSE      ; TRUE or FALSE
 ABSCMDBUSYDELAY=        ; Set delay time for a ABSCMD got ABSTRACTCS.busy == 1
 ENTERDEBUGTIME=         ; Set time for enter debug
+DMIBUSYADJUSTTIMES=10   ; Set number of times(10~500) for dmi scan again when DMI.op gets busy. Every two times will increase one idle delay
 
 ; About Socket Server
 [SOCKETSERVER]
 SOCKETPORT=1025         ; as 1025
 
-
 [VENDOR]
 VID=
 PID=
+
